kubernetes/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-flask
  name: hello-flask
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-flask
  type: ClusterIP
