kubernetes/hello-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: std-ingress-class
  name: hello-flask
spec:
  rules:
  - host: hello-flask.example.com
    http:
      paths:
      - backend:
          serviceName: hello-flask
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - hello-flask.example.com
